# mypycli

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
docs/superpowers/plans/: 2026-04-20-i18n.md
docs/superpowers/specs/: 2026-04-20-i18n-design.md
examples/: i18n_demo.py
examples/locales/: en.yml  ru.yml  zh.yml
mypycli/: __init__.py  __meta__.py  application.py  logger.py
mypycli/cli/: parser.py  runner.py  standalone.py
mypycli/cli/commands/: __init__.py  _shared.py  console.py  daemon.py  install.py  locales.py  logs.py  uninstall.py  update.py
mypycli/console/: __init__.py  ansi.py  builtin.py  console.py  input.py  output.py  progress.py
mypycli/database/: __init__.py  schema.py  store.py  utils.py
mypycli/i18n/: __init__.py  detect.py  internal.py  loader.py  translator.py
mypycli/i18n/locales/: zh.yml
mypycli/modules/: __init__.py  base.py  registry.py
mypycli/modules/interfaces/: __init__.py  commandable.py  daemonic.py  installable.py  startable.py  statusable.py  updatable.py
mypycli/types/: __init__.py  console.py  prompts.py  sysinfo.py  units.py
mypycli/utils/: __init__.py  config.py  convert.py  daemon.py  errors.py  github.py  network.py  service.py  sysinfo.py  system.py  worker.py
tests/: conftest.py  test_ansi.py  test_application.py  test_application_i18n.py  test_cli_commands.py  test_cli_locales.py  test_cli_parser.py  test_cli_runner.py  test_config.py  test_console_ask.py  test_console_help.py  test_console_progress.py  test_console_validate.py  test_convert.py  test_daemon.py  test_database.py  test_db_set_language.py  test_errors.py  test_github.py  test_i18n_detect.py  test_i18n_internal.py  test_i18n_loader.py  test_i18n_translator.py  test_installable.py  test_logger.py  test_logs_filter.py  test_modules.py  test_network.py  test_sysinfo.py  test_system.py  test_worker.py
